generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

//━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
// ENUMS
//━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

enum UserTier {
  FREE
  PRO
}

enum SubscriptionStatus {
  ACTIVE
  INACTIVE
  CANCELED
  PAST_DUE
  UNPAID
  TRIALING
}

//━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
// MODELS
//━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

model User {
  id            String   @id @default(cuid())
  email         String   @unique
  name          String?
  password      String?  // Nullable for OAuth-only users
  image         String?
  emailVerified DateTime? // CRITICAL for verified-only OAuth linking
  tier          UserTier @default(FREE)
  role          String   @default("USER")
  isActive      Boolean  @default(true)
  
  // Stripe Trial fields (Part 18: Anti-abuse)
  hasUsedStripeTrial      Boolean  @default(false)
  stripeTrialStartedAt    DateTime?
  
  // dLocal 3-day plan fields (Part 18: Anti-abuse)
  hasUsedThreeDayPlan     Boolean  @default(false)
  threeDayPlanUsedAt      DateTime?
  
  // Fraud detection fields
  signupIP          String?
  lastLoginIP       String?
  deviceFingerprint String?
  
  accounts          Account[]
  alerts            Alert[]
  watchlists        Watchlist[]
  subscription      Subscription?
  payments          Payment[]
  fraudAlerts       FraudAlert[]
  
  sessions          Session[]
  
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  @@index([email])
  @@index([tier])
}

model Account {
  id                 String  @id @default(cuid())
  userId             String
  type               String
  provider           String
  providerAccountId  String
  refresh_token      String?
  access_token       String?
  expires_at         Int?
  token_type         String?
  scope              String?
  id_token           String?
  session_state      String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model Subscription {
  id        String   @id @default(cuid())
  userId    String   @unique
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  // Stripe fields (nullable for dLocal subscriptions)
  stripeCustomerId       String?  @unique
  stripeSubscriptionId   String?  @unique
  stripePriceId          String?
  stripeCurrentPeriodEnd DateTime?
  
  // dLocal fields (nullable for Stripe subscriptions)
  dLocalPaymentId        String?  @unique
  dLocalPaymentMethod    String?  // 'UPI', 'PAYTM', 'GOPAY', etc.
  dLocalCountry          String?  // 'IN', 'ID', 'PK', etc.
  dLocalCurrency         String?  // 'INR', 'IDR', 'PKR', etc.
  
  // Common fields
  planType               String?  // 'MONTHLY', 'THREE_DAY' (dLocal only)
  amountUsd              Float
  status                 SubscriptionStatus
  expiresAt              DateTime? // Explicit expiry date (critical for dLocal)
  renewalReminderSent    Boolean  @default(false)
  
  payments               Payment[]
  
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt

  @@index([userId])
  @@index([status])
  @@index([expiresAt])
}

model Alert {
  id          String   @id @default(cuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  // Alert configuration
  name        String?
  symbol      String
  timeframe   String
  condition   String   // JSON string for complex conditions
  alertType   String   @default("PRICE_TOUCH_LINE")
  
  // Alert state
  isActive    Boolean  @default(true)
  lastTriggered DateTime?
  triggerCount Int     @default(0)
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([userId])
  @@index([symbol, timeframe])
  @@index([isActive])
}

model Watchlist {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  name      String
  order     Int      @default(0)
  items     WatchlistItem[]
  
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
}

model WatchlistItem {
  id          String   @id @default(cuid())
  watchlistId String
  watchlist   Watchlist @relation(fields: [watchlistId], references: [id], onDelete: Cascade)
  userId      String
  symbol      String
  timeframe   String
  order       Int      @default(0)
  createdAt   DateTime @default(now())

  @@unique([userId, symbol, timeframe])
  @@index([watchlistId])
  @@index([userId])
}

model Payment {
  id                 String   @id @default(cuid())
  userId             String
  user               User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  subscriptionId     String?
  subscription       Subscription? @relation(fields: [subscriptionId], references: [id])
  
  // Payment Provider
  provider           String   // 'STRIPE' or 'DLOCAL'
  
  // Transaction Details
  providerPaymentId  String   @unique
  providerStatus     String
  
  // Amount and Currency
  amount             Decimal
  amountUSD          Decimal
  currency           String
  country            String?
  paymentMethod      String?
  
  // Additional Data
  planType           String?  // 'THREE_DAY', 'MONTHLY'
  duration           Int?     // Days (3 or 30)
  discountCode       String?
  discountAmount     Decimal?
  
  // Status and Timestamps
  status             String   // 'PENDING', 'COMPLETED', 'FAILED', 'REFUNDED', 'CANCELLED'
  failureReason      String?
  
  // Fraud Detection Metadata
  ipAddress          String?
  deviceFingerprint  String?
  
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  @@index([userId])
  @@index([provider])
  @@index([status])
  @@index([createdAt])
}

model FraudAlert {
  id                String   @id @default(cuid())
  userId            String
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  // Alert Details
  alertType         String   // '3DAY_PLAN_REUSE', 'MULTIPLE_FAILED_PAYMENTS', 'SUSPICIOUS_IP_CHANGE', etc.
  severity          String   // 'LOW', 'MEDIUM', 'HIGH'
  description       String
  
  // Detection Metadata
  detectedAt        DateTime @default(now())
  ipAddress         String?
  deviceFingerprint String?
  additionalData    Json?    // Flexible field for extra context
  
  // Admin Review
  reviewedBy        String?  // Admin user ID who reviewed
  reviewedAt        DateTime?
  resolution        String?  // 'FALSE_POSITIVE', 'WARNING_SENT', 'BLOCKED', etc.
  notes             String?  // Admin notes
  
  @@index([userId])
  @@index([alertType])
  @@index([severity])
  @@index([detectedAt])
}
